style.css
html,body {
    font-family: Raleway, sans-serif;
    overflow:hidden;
    width:100%;
    height:100%;
    position:absolute;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#16054a+0,c8a6b4+100 */
    background: #16054a; /* Old browsers */
    background: -moz-linear-gradient(45deg, #16054a 0%, #c8a6b4 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(45deg, #16054a 0%,#c8a6b4 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(45deg, #16054a 0%,#c8a6b4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#16054a', endColorstr='#c8a6b4',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */    color: #FFF;
    /* hsl(207,8%,22%) */
}

#main-wrapper{
    text-align: center;
    height: 100vh;
    width: 100vw;
    position:relative;
}

#header-wrapper{
    height: 20%;
}

#center-wrapper{
    display: inline-block;
    width: 70%;
    height: 70%;
    vertical-align: middle;
    text-align: left;
}

.name{
    font-size: 4vw;
    font-weight:500;
    line-height: 0.6;
}

.nickname{
    font-size: 2vw;
    font-weight: 100;
}

.workat{
    font-size: 2vw;
    padding-top: 5vh;
    font-weight: 300;
}

#footer-wrapper{
    height: 10%;
}

.font-shadow{
    text-shadow: 0px 1px 2px rgba(0,0,0,0.4);
}

.container  {
    width:100%;
    height:100%;
    position:absolute;
}
#blurCanvasTop{
    left:0%;
    top:0%;
    position:absolute;
}
#blurCanvasBottom{
    left:50%;
    top:0;
    position:absolute;
}

#blurCanvasTop{
    left:0%;
    top:0%;
    position:absolute;
}
#blurCanvasBottom{
    left:50%;
    top:0;
    position:absolute;
}

.blur {
    width:100%;
    height:100%;
    position:absolute;
    overflow:hidden;
}
.blurTop{
    left:40%;
    top:-110%;
    transform:rotate(20deg);
    transform-origin: 0 100%;
}
.blurBottom{
    left:-60%;
    top:100%;
    transform:rotate(20deg);
    transform-origin: 100% 0%;
}

